--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>تحية إلى أمي</title>
+  <meta charset="UTF-8">
+  <title>أفضل صديقي</title>
   <style>
-    body { text-align: center; font-family: Arial; margin-top: 50px; }
-    img { width: 200px; border-radius: 20px; margin-top: 20px; }
-    .heart { font-size: 60px; color: red; }
+    body {
+      background: #f9f3e9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+    }
+    .card {
+      background: url('https://i.postimg.cc/76SJ1J3T/paper-bg.png');
+      background-size: cover;
+      border: 10px solid #d4af37;
+      border-radius: 30px;
+      padding: 30px;
+      width: 90%;
+      max-width: 500px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      text-align: center;
+    }
+    .card h1 {
+      color: #8b4513;
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+    .card img {
+      max-width: 100%;
+      border-radius: 20px;
+      margin-bottom: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    .card p {
+      font-size: 20px;
+      color: #4b2e1e;
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
-  <h2>أدخل الكود السري:</h2>
-  <input type="password" id="codeInput" />
-  <button onclick="checkCode()">تأكيد</button>
-
-  <div id="result" style="display:none;">
-    <h2>أمي الغالية ❤️</h2>
-    <img src="https://i.ibb.co/PvVkhQ8R/Snapchat-1724410277.jpg" alt="أمي" />
-    <div class="heart">❤️</div>
+  <div class="card">
+    <h1>أفضل صديقي</h1>
+    <img src="https://i.postimg.cc/62pNJYYy/received-931844425221741-1752368558321.jpg" alt="صديقي">
+    <p>عبد الرحمان</p>
+    <p>كل الشكر والتقدير لهذا الصديق</p>
   </div>
-
-  <script>
-    function checkCode() {
-      const code = document.getElementById("codeInput").value;
-      if (code === "1234") {
-        document.getElementById("result").style.display = "block";
-      } else {
-        alert("الكود خاطئ!");
-      }
-    }
-  </script>
 </body>
 </html>
