رسالة شكر لأستاذة

--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>أفضل صديقي</title>
+  <title>أفضل أستاذة</title>
   <style>
     body {
-      background: #f9f3e9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-    }
-    .card {
       background: url('https://i.postimg.cc/76SJ1J3T/paper-bg.png');
       background-size: cover;
-      border: 10px solid #d4af37;
-      border-radius: 30px;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #000;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: rgba(255, 255, 255, 0.95);
       padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      margin-top: 50px;
+    }
+    h1 {
+      text-align: center;
+      color: red;
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+    .message {
+      font-size: 20px;
+      line-height: 1.8;
+      padding: 20px;
+    }
+    .signature {
+      text-align: left;
+      margin-top: 40px;
+      font-size: 18px;
+      font-style: italic;
+    }
+    .image-section {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .image-section img {
       width: 90%;
       max-width: 500px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      text-align: center;
-    }
-    .card h1 {
-      color: #8b4513;
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-    .card img {
-      max-width: 100%;
-      border-radius: 20px;
-      margin-bottom: 15px;
+      border-radius: 15px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-    .card p {
-      font-size: 20px;
-      color: #4b2e1e;
-      margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>أفضل صديقي</h1>
-    <img src="https://i.postimg.cc/62pNJYYy/received-931844425221741-1752368558321.jpg" alt="صديقي">
-    <p>عبد الرحمان</p>
-    <p>كل الشكر والتقدير لهذا الصديق</p>
-  </div>
-</body>
-</html>
+  <div class="container">
+    <h1>أفضل أستاذة</h1>
+    <div class="message">
+      بسم الله الرحمن الرحيم والصلاة والسلام على أشرف المرسلين محمد رسول الله صلى الله عليه وسلّم.<br><br>
+      أكتب هذه الرسالة إلى أفضل أستاذة درستني ودعمتني، كل الشكر لأستاذة اللغة الفرنسية بوقنة حياة. أتمنى من
