--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>أفضل أستاذة</title>
   <style>
     body {
       background: url('https://i.postimg.cc/76SJ1J3T/paper-bg.png');
       background-size: cover;
       font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       color: #000;
     }
     .container {
       max-width: 800px;
-      margin: auto;
+      margin: 50px auto;
       background: rgba(255, 255, 255, 0.95);
       padding: 30px;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      margin-top: 50px;
     }
     h1 {
       text-align: center;
@@ -29,7 +28,8 @@
     .message {
       font-size: 20px;
       line-height: 1.8;
-      padding: 20px;
+      padding: 0 20px;
+      text-align: justify;
     }
     .signature {
       text-align: left;
@@ -53,5 +53,13 @@
   <div class="container">
     <h1>أفضل أستاذة</h1>
     <div class="message">
-      بسم الله الرحمن الرحيم والصلاة والسلام على أشرف المرسلين محمد رسول الله صلى الله عليه وسلّم.<br><br>
-      أكتب هذه الرسالة إلى أفضل أستاذة درستني ودعمتني، كل الشكر لأستاذة اللغة الفرنسية بوقنة حياة. أتمنى من
+      بسم الله الرحمن الرحيم والصلاة والسلام على أشرف المرسلين محمد رسول الله صلى الله عليه وسلّم.<br /><br />
+      أكتب هذه الرسالة إلى أفضل أستاذة درستني ودعمتني، كل الشكر لأستاذة اللغة الفرنسية بوقنة حياة. أتمنى من الله أن يوفقك في حياتك وشكراً جزيلاً.
+    </div>
+    <div class="signature">تلميذك: موزاع عبدالله</div>
+    <div class="image-section">
+      <img src="https://i.postimg.cc/C5Cb1JJz/Screenshot-20250729-170435-Lite.jpg" alt="صورة الأستاذة بوقنة حياة" />
+    </div>
+  </div>
+</body>
+</html>
