--- a/index.html
+++ b/index.html
@@ -1,65 +1,158 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>أفضل أستاذة</title>
-  <style>
-    body {
-      background: url('https://i.postimg.cc/76SJ1J3T/paper-bg.png');
-      background-size: cover;
-      font-family: 'Arial', sans-serif;
-      margin: 0; padding: 0;
-      color: #000;
-    }
-    .container {
-      max-width: 800px;
-      margin: 50px auto;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-    }
-    h1 {
-      text-align: center;
-      color: red;
-      font-size: 36px;
-      margin-bottom: 30px;
-    }
-    .message {
-      font-size: 20px;
-      line-height: 1.8;
-      padding: 0 20px;
-      text-align: justify;
-    }
-    .signature {
-      text-align: left;
-      margin-top: 40px;
-      font-size: 18px;
-      font-style: italic;
-    }
-    .image-section {
-      text-align: center;
-      margin-top: 30px;
-    }
-    .image-section img {
-      width: 90%;
-      max-width: 500px;
-      border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>خدعة فليكسي</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: url('https://i.imgur.com/OdL0XPt.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+    text-align: center;
+    padding: 50px 20px;
+  }
+  .step {
+    max-width: 400px;
+    margin: auto;
+    background: rgba(0,0,0,0.7);
+    padding: 20px;
+    border-radius: 12px;
+    display: none;
+  }
+  .step.active {
+    display: block;
+  }
+  input[type="text"] {
+    padding: 10px;
+    font-size: 18px;
+    width: 90%;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    border: none;
+  }
+  button {
+    padding: 12px 30px;
+    font-size: 18px;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  .btn-confirm {
+    background-color: #4caf50;
+    color: white;
+  }
+  .btn-cancel {
+    background-color: #f44336;
+    color: white;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>أفضل أستاذة</h1>
-    <div class="message">
-      بسم الله الرحمن الرحيم والصلاة والسلام على أشرف المرسلين محمد رسول الله صلى الله عليه وسلّم.<br /><br />
-      أكتب هذه الرسالة إلى أفضل أستاذة درستني ودعمتني، كل الشكر لأستاذة اللغة الفرنسية بوقنة حياة. أتمنى من الله أن يوفقك في حياتك وشكراً جزيلاً.
-    </div>
-    <div class="signature">تلميذك: موزاع عبدالله</div>
-    <div class="image-section">
-      <img src="https://i.postimg.cc/C5Cb1JJz/Screenshot-20250729-170435-Lite.jpg" alt="صورة الأستاذة بوقنة حياة" />
-    </div>
+
+<!-- خطوة 1: اختيار اللغة (ثابت عربي الآن) -->
+<div class="step active" id="step1">
+  <h2>اختر اللغة</h2>
+  <button class="btn-confirm" onclick="nextStep(2)">العربية</button>
+</div>
+
+<!-- خطوة 2: اختيار الشريحة -->
+<div class="step" id="step2">
+  <h2>اختر شريحة الشحن</h2>
+  <button onclick="selectOperator('جيزي')">جيزي</button>
+  <button onclick="selectOperator('موبليس')">موبليس</button>
+  <button onclick="selectOperator('أوريدو')">أوريدو</button>
+  <div style="margin-top:20px;">
+    <button class="btn-cancel" onclick="goBack(1)">رجوع</button>
   </div>
+</div>
+
+<!-- خطوة 3: إدخال الرقم -->
+<div class="step" id="step3">
+  <h2>أدخل الرقم المراد شحنه</h2>
+  <input type="text" id="phoneNumber" placeholder="مثال: 0661123456" />
+  <div>
+    <button class="btn-confirm" onclick="nextStep(4)">تأكيد</button>
+    <button class="btn-cancel" onclick="goBack(2)">إلغاء</button>
+  </div>
+</div>
+
+<!-- خطوة 4: اختيار مبلغ الشحن -->
+<div class="step" id="step4">
+  <h2>اختر مبلغ الشحن</h2>
+  <button onclick="selectAmount(50)">50 دج</button>
+  <button onclick="selectAmount(100)">100 دج</button>
+  <button onclick="selectAmount(150)">150 دج</button>
+  <button onclick="selectAmount(200)">200 دج</button>
+  <button onclick="selectAmount(500)">500 دج</button>
+  <button onclick="selectAmount(1000)">1000 دج</button>
+  <div style="margin-top:20px;">
+    <button class="btn-cancel" onclick="goBack(3)">رجوع</button>
+  </div>
+</div>
+
+<!-- خطوة 5: تأكيد الطلب -->
+<div class="step" id="step5">
+  <h2>هل أنت متأكد من طلبك؟</h2>
+  <div id="summary" style="margin-bottom:20px;"></div>
+  <button class="btn-confirm" onclick="showJoke()">تأكيد</button>
+  <button class="btn-cancel" onclick="goBack(4)">إلغاء</button>
+</div>
+
+<script>
+  let selectedOperator = null;
+  let selectedAmount = null;
+
+  function nextStep(step) {
+    // تحقق من خطوات معينة قبل الانتقال
+    if(step === 4) {
+      // تأكد أن الرقم صحيح مبدئيًا
+      const phone = document.getElementById('phoneNumber').value.trim();
+      if(!phone.match(/^0\d{8,9}$/)) {
+        alert('الرجاء إدخال رقم هاتف صالح يبدأ بصفر ويتكون من 9 أو 10 أرقام.');
+        return;
+      }
+    }
+
+    // إخفاء كل الخطوات
+    document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
+
+    // إظهار الخطوة المطلوبة
+    document.getElementById('step' + step).classList.add('active');
+
+    // تحديث ملخص الخطوة 5
+    if(step === 5) {
+      const phone = document.getElementById('phoneNumber').value.trim();
+      document.getElementById('summary').innerHTML = `
+        شريحة: <b>${selectedOperator}</b><br>
+        رقم الهاتف: <b>${phone}</b><br>
+        المبلغ: <b>${selectedAmount} دج</b>
+      `;
+    }
+  }
+
+  function selectOperator(operator) {
+    selectedOperator = operator;
+    nextStep(3);
+  }
+
+  function selectAmount(amount) {
+    selectedAmount = amount;
+    nextStep(5);
+  }
+
+  function goBack(step) {
+    document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
+    document.getElementById('step' + step).classList.add('active');
+  }
+
+  function showJoke() {
+    alert("هههههههه فليكسي شعر باطل\nقالك باطل يبطل روح صرف على روحك");
+    // إعادة للخطوة 1 لإعادة المحاولة
+    goBack(1);
+  }
+</script>
+
 </body>
 </html>
